# SeetafaceJni

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/seeta/sdk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/FaceDetector/: CMakeLists.txt  FaceDetectorJni.cpp
app/src/main/cpp/include/FaceDetector/seeta/: FaceDetector.h
app/src/main/cpp/include/FaceDetector/seeta/util/: Po.h
app/src/main/cpp/include/seeta/: QualityStructure.h
app/src/main/java/com/seeta/sdk/: FaceDetectorNative.java  FaceRecognizer.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
